# AI-Minds-Hackathon

./: .env.example  .gitignore  ADK_IMPLEMENTATION.md  LICENSE  MEMORY_SYSTEM_SUMMARY.md  README.md  Technical_Choices_And_Benchmarks.md  docker-compose.yml  pyproject.toml  test_memory_integration.py
.claude/: MEMORY_INTEGRATION.md  MEMORY_QUICK_START.md  architecture_flows.md  masterprompt.md  neo4jReasoning.md  qdrant-architecture.md
.claude/memo-db-mini-blueprint/: README.md  mini-memodb-architecture.md
app/: config.py  main.py
app/agents/: README.md  __init__.py  neo4j_agent.py  orchestrator.py  prompt_chain.py  qdrant_agent.py  qdrant_agent.py.backup
app/memory/: README.md  __init__.py  event_store.py  memory_service.py  models.py  profile_store.py  prompts.py
app/models/: __init__.py  models.py  reasoning.py
app/routes/: __init__.py  admin_routes.py  agent_routes.py  files.py  ingest_routes.py  reasoning.py  search_routes.py
app/schemas/: reasoning.py
app/services/: confidence.py  cypher_templates.py  entity_resolver.py  graph_reasoning.py  graph_schema.py  graph_updater.py  label_mapping.py  neo4j.py  prompt_builder.py  qdrant.py  query_decomposer.py  reasoning_chain_builder.py  shadow_senses.py  template_router.py
data/: shadow_ledger.db  user_profile.json
docs/: MEMORY_ARCHITECTURE.md  MEMORY_TROUBLESHOOTING.md
frontend/: package-lock.json  package.json
frontend/src/: ipc-messages.ts  sharedState.ts
frontend/src/main/: ipc.ts  (+8 more)
frontend/tools/: extract-animations.sh
scripts/: ingest_neo4j_only.py
tests/: onthology_result_opus.md  reasoning_chain_results.md  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample_onthological_relation1.txt  sample_onthological_relation2.txt  test_confidence.py  test_content_sanitizer.py  test_cypher_templates.py  test_embeddings.py  test_entity_extraction.py  test_models.py  test_ontological_hard.py  test_ontological_medium.py  test_ontology_builder.py  test_prompt_builder.py  test_query_decomposer.py  test_reasoning_chain_builder.py  test_reasoning_chains.py  test_schemas.py  test_template_router.py
(+49 files in other folders)
