[project]
name = "ai-minds-hackathon"
version = "0.1.0"
description = "AI Minds Hackathon"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "qdrant-client",
    "neo4j",
    "python-multipart",
    "sentence-transformers",
    "transformers",
    "torch",
    "pillow",
    "soundfile",
    "langchain-text-splitters",
    "spacy",
    "pymupdf",
    "pytesseract",
    "imagehash",
    "opencv-python",
    "python-magic",
    "aiofiles",
    "sentencepiece>=0.2.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
